.banner--small fix too big padding

--- a/themes/openy_themes/openy_carnation/src/scss/paragraphs/_banner.scss
+++ b/themes/openy_themes/openy_carnation/src/scss/paragraphs/_banner.scss
@@ -39,7 +39,7 @@
   // heading only (blog nodes)
   &--small {
     min-height: 120px;
-    padding-top: 70px;
+    padding-top: 44px;
   }
 
   // heading + subheading (program nodes)
